Fix: chmod sync + verify permissions